{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 11,
  "lineage": "a7450e99-ce9c-ad18-cd01-7aaf8449c7f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "grippo_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c420794c55e3b807",
            "arn": "arn:aws:ec2:eu-west-1:183631307955:elastic-ip/eipalloc-0c420794c55e3b807",
            "domain": "vpc",
            "id": "eipalloc-0c420794c55e3b807",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-72-123-127.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.123.127",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "grippo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631307955:internet-gateway/igw-0adbbc01976276d52",
            "id": "igw-0adbbc01976276d52",
            "owner_id": "183631307955",
            "tags": {
              "Name": "Grippo-IGW"
            },
            "tags_all": {
              "Name": "Grippo-IGW"
            },
            "vpc_id": "vpc-0bdc23effa782f353"
          },
          "dependencies": [
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grippo_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631307955:route-table/rtb-0742c8b1c7a288792",
            "id": "rtb-0742c8b1c7a288792",
            "owner_id": "183631307955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adbbc01976276d52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Grippo"
            },
            "tags_all": {
              "Name": "Public-Route-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc23effa782f353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.grippo_igw",
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631307955:security-group/sg-0969b046553e4aa12",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0969b046553e4aa12",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.150.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20241122162539142800000001",
            "name_prefix": "terraform-",
            "owner_id": "183631307955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG-Grippo"
            },
            "tags_all": {
              "Name": "Private-SG-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc23effa782f353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631307955:security-group/sg-0178bbec169f80d78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0178bbec169f80d78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241122162539148600000002",
            "name_prefix": "terraform-",
            "owner_id": "183631307955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-SG-Grippo"
            },
            "tags_all": {
              "Name": "Public-SG-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc23effa782f353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "grippo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631307955:vpc/vpc-0bdc23effa782f353",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0c5b8dfd4eed3080e",
            "default_route_table_id": "rtb-02e3c8056ed8e25e5",
            "default_security_group_id": "sg-0a314588302cab066",
            "dhcp_options_id": "dopt-059a9726cfa708e68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdc23effa782f353",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e3c8056ed8e25e5",
            "owner_id": "183631307955",
            "tags": {
              "Environment": "Development",
              "Name": "Grippo-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Grippo-vpc"
            }
          }
        }
      ]
    }
  ]
}